[package]
name = "solxact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "=0.2.14"
base64 = "=0.13.0"
bincode = "=1.3.3"
borsh = "=0.9.3"
bs58 = "=0.4.0"
derivation-path = "=0.2.0"
ed25519 = "=1.5.2"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "=0.2.0"
hex = "=0.4.3"
hmac = "=0.12.1"
rpassword = "=7.0.0"
pbkdf2 = "=0.11.0"
serde = "=1.0.145"
serde_json = "=1.0"
sha2 = "=0.10.5"
ureq = "=2.4.0"
