[package]
name = "solxact"
version = "0.1.3"
edition = "2021"
description = "solxact is a utility program that can perform many useful actions on solana transactions"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "=0.13.0"
bincode = "=1.3.3"
borsh = "=0.9.3"
bs58 = "=0.4.0"
curve25519-dalek = "=3.2.1"
derivation-path = "=0.2.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "=0.2.0"
hex = "=0.4.3"
hmac = "=0.12.1"
rpassword = "=7.0.0"
pbkdf2 = "=0.11.0"
serde = "=1.0.145"
serde_json = "=1.0"
sha2 = "=0.10.5"
ureq = "=2.4.0"
